--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             width: 350px;
         }
 
+        .publication .image_media img {
+            width: 350px;
+            height: 250px;
+        }
+
         .publication .title {
             font-weight: bold;
             margin-bottom: 0.5rem;
@@ -118,10 +123,6 @@
             margin-bottom: 1rem;
         }
 
-        .image_media {
-            margin-bottom: 0rem;
-        }
-
         nav {
             position: fixed;
             top: 0;
@@ -177,8 +178,7 @@
                         Carolus H.J. (Koen) Kusters
                     </h1>
                     <h2 class="subtitle">
-                        PhD Candidate Medical Computer Vision & AI - <a
-                            href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>
+                        PhD Candidate Medical Computer Vision & AI - Eindhoven University of Technology
                     </h2>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                             <h4 class="title is-4">Will Transformers change gastrointestinal endoscopic image analysis? A comparative analysis
                             between CNNs and Transformers, in terms of performance, robustness and generalization</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Jelmer B. Jukema, Kiki N. Fockens,
-                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">Submission under review at Medical Image Analysis</p>
                             <div class="links">
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
@@ -272,7 +272,7 @@
 <!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Optimizing Multi-Expert Consensus for Classification and Precise Localization of Barrett's Neoplasia</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Rixta A.H. van Eijck van Heslinga,
-                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">CaPTion Workshop (3rd Edition) - Satellite Event MICCAI 2024</p>
                             <div class="links">
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
@@ -293,7 +293,7 @@
 <!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">CNNs vs. Transformers: Performance and Robustness in Endoscopic Image Analysis</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
-                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">AMAI Workshop (2nd Edition) - Satellite Event MICCAI 2023</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
@@ -315,7 +315,7 @@
                             <h4 class="title is-4">Real-time Barrett's neoplasia characterization in NBI videos using
                             an int8-based quantized neural network</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
-                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">SPIE Medical Imaging 2023</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
@@ -335,7 +335,7 @@
 <!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">A CAD System for Real-Time Characterization of Neoplasia in Barrett's Esophagus NBI Videos</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
-                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">CaPTion Workshop (1st Edition) - Satellite Event MICCAI 2022</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
@@ -354,7 +354,7 @@
 <!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Colorectal Polyp classification using Confidence-Calibrated Convolutional Neural Networks</h4>
                             <p class="authors"><u>Koen C. Kusters</u>, Thom Scheeve, Nikoo Dehghani, Quirine E.W. van der Zander,
-                                Ramon-Michel Schreuder, Ad A.M. Masclee, Erik J. Schoon, Fons van der Sommen, Peter H.N. de With</p>
+                                Ramon-Michel Schreuder, Ad A.M. Masclee, Erik J. Schoon, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">SPIE Medical Imaging 2022</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
@@ -373,7 +373,8 @@
 <!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Conditional Generative Adversarial Networks for low-dose CT image denoising aiming
                             at preservation of critical image content</h4>
-                            <p class="authors"><u>Koen C. Kusters</u>, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen, Peter H.N. de With, Fons van der Sommen</p>
+                            <p class="authors"><u>Koen C. Kusters</u>, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen,
+                                Peter H.N. de With and Fons van der Sommen</p>
                             <p class="venue">IEEE EMBC 2021</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-ieee"></i></span><a
