--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         }
 
         .publication .image_media img {
-            width: 350px;
-            height: 250px;
+            width: 225px;
+            height: 300px;
         }
 
         .publication .title {
@@ -378,8 +378,7 @@
                             <p class="venue">IEEE EMBC 2021</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-ieee"></i></span><a
-                                        href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">IEEE
-                                    proceedings</a></p>
+                                        href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">IEEE Xplore</a></p>
                             </div>
 <!--                        </a>-->
                     </div> 
