--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
 
         .logo_prize img {
             height: 25px;
-            padding-top: 5px;
-            padding-bottom: -5px;
+            width: 25px;
+            /*padding-top: 5px;*/
+            /*padding-bottom: -5px;*/
             vertical-align: middle;
         }
 
