--- a/index.html
+++ b/index.html
@@ -256,6 +256,27 @@
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image_media">
+                            <img src="publications/cmpb.jpg">
+                        </div>
+                    </div>
+                    <div class="details">
+<!--                        <a href="index.html" target="_blank">-->
+                            <h4 class="title is-4">Designing a Computer-Aided Detection system for Barrett's neoplasia: Insights in architectural choices, training strategies and inference approaches</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Rixta A.H. van Eijck van Heslinga, Jelmer B. Jukema, Kiki N. Fockens,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
+                            <p class="venue">Submission under review at Computer Methods and Programs in Biomedicine</p>
+                            <div class="links">
+<!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
+<!--                                        href="..." target="_blank">Computer Methods and Programs in Biomedicine - Volume XX </a></p>-->
+                                <p><span class="icon"><i class="fab fa-github"></i></span><a
+                                        href="https://github.com/chjkusters/Insights-CADe-BE" target="_blank">Github</a></p>
+                            </div>
+<!--                        </a>-->
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image_media">
                             <img src="publications/media.jpg">
                         </div>
                     </div>
@@ -265,7 +286,7 @@
                             between CNNs and Transformers, in terms of performance, robustness and generalization</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Jelmer B. Jukema, Kiki N. Fockens,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
-                            <p class="venue">Submission under review at Medical Image Analysis</p>
+                            <p class="venue">Medical Image Analysis - Volume XX</p>
                             <div class="links">
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
 <!--                                        href="..." target="_blank">Medical Image Analysis - Volume XX </a></p>-->
