--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <nav>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#Pubs">Publication</a></li>
+        <li><a href="#Pubs">Publications</a></li>
         <li><a href="#Exp">Experiences</a></li>
     </ul>
 </nav>
