--- a/index.html
+++ b/index.html
@@ -286,10 +286,12 @@
                             between CNNs and Transformers, in terms of performance, robustness and generalization</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Jelmer B. Jukema, Kiki N. Fockens,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
-                            <p class="venue">Medical Image Analysis - Volume XX</p>
+                            <p class="venue">Medical Image Analysis - Volume 99, January 2025</p>
                             <div class="links">
+                                <p><span class="icon"><i class="logo_elsevier"><img src="logos/elsevier.png"></i></span><a
+                                        href="https://doi.org/10.1016/j.media.2024.103348" target="_blank">Elsevier ScienceDirect</a></p>
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
-<!--                                        href="..." target="_blank">Medical Image Analysis - Volume XX </a></p>-->
+<!--                                        href="https://doi.org/10.1016/j.media.2024.103348" target="_blank">Elsevier ScienceDirect</a></p>-->
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
