--- a/index.html
+++ b/index.html
@@ -288,10 +288,8 @@
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen and Peter H.N. de With</p>
                             <p class="venue">Medical Image Analysis - Volume 99, January 2025</p>
                             <div class="links">
-                                <p><span class="icon"><i class="logo_elsevier"><img src="logos/elsevier.png"></i></span><a
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1016/j.media.2024.103348" target="_blank">Elsevier ScienceDirect</a></p>
-<!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
-<!--                                        href="https://doi.org/10.1016/j.media.2024.103348" target="_blank">Elsevier ScienceDirect</a></p>-->
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
