--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">M.Sc. Internship<br><i>Philips Medical Systems B.V. </i></h4>
+                    <h4 class="title is-4">M.Sc Internship<br><i>Philips Medical Systems B.V. </i></h4>
                     <ul style="list-style-type:circle">
                         <li><strong>Project title:</strong> Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>
                             <ul style="list-style-type:square">
