--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
 <!--                                        href="..." target="_blank">Computer Methods and Programs in Biomedicine - Volume XX </a></p>-->
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/chjkusters/Insights-CADe-BE" target="_blank">Github</a></p>
+                                        href="https://github.com/chjkusters/Insights-CADe-BE" target="_blank">Code</a></p>
                             </div>
 <!--                        </a>-->
                     </div>
@@ -291,7 +291,7 @@
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1016/j.media.2024.103348" target="_blank">Elsevier ScienceDirect</a></p>
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
+                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Code</a></p>
                             </div>
 <!--                        </a>-->
                     </div>
@@ -312,7 +312,7 @@
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
 <!--                                        href="..." target="_blank">Springer Proceedings</a></p>-->
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Github</a></p>
+                                        href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Code</a></p>
                             </div>
 <!--                        </a>-->
                     </div>
@@ -333,7 +333,7 @@
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1007/978-3-031-47076-9_3" target="_blank">Springer Proceedings</a></p>
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
+                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Code</a></p>
                             </div>
 <!--                        </a>-->
                     </div>
